feat(payment): Implement Stripe payment service and frontend integration
- Added StripePaymentService to handle payment operations including creating, retrieving, confirming payment intents, and processing refunds.
- Configured application.yml for Stripe API key and other service settings.
- Created SQL migration script to set up payments table with necessary fields and indexes.
- Added schema.sql to create payment schema.
- Developed paymentApi.js for API calls related to payment initiation, retrieval, and refunding.
- Implemented PaymentModal component for handling payment UI with Stripe Elements.
- Styled PaymentModal and its components with CSS for better user experience.